--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 authors = ["Elias Kartashov <elias@lowenware.com>", "Barugon"]
 description = "File dialog window for egui"
 edition = "2021"
+keywords = ["file dialog", "file picker"]
 license = "MIT"
 name = "egui_file"
+repository = "https://github.com/Barugon/egui_file"
 version = "0.2.0"
 
 [dependencies.egui]
