--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,10 @@ version = "0.20.0"
 
 [dependencies.egui]
 version = "0.30"
+
+[dependencies.dyn-clone]
+version = "1.0.17"
+
+[dev-dependencies.eframe]
+version = "0.30"
+
